# CDB2OSG

./: .gitignore  README.md
CDB2OSG/: CMakeLists.txt
CDB2OSG/src/: Utils.h  main.cpp
CDB2OSG/src/CDB/: Database.cpp  Database.h  LodTileQuery.cpp  LodTileQuery.h  Query.cpp  Query.h  Resource.cpp  Resource.h  ResourceAccessor.cpp  ResourceAccessor.h
CDB2OSG/src/CDB/Model/: Constants.h  DoubleValue.cpp  DoubleValue.h  Geocell.cpp  Geocell.h  IntValue.cpp  IntValue.h  LOD.cpp  LOD.h  Latitude.cpp  Latitude.h  Layer.cpp  Layer.h  LayerComponent.cpp  LayerComponent.h  LodTile.cpp  LodTile.h  Longitude.cpp  Longitude.h  Model.h  RRef.cpp  RRef.h  Selector.cpp  Selector.h  URef.cpp  URef.h  Zone.cpp  Zone.h
CDB2OSG/src/CDB/Resource/: ResourceLocator.cpp  ResourceLocator.h
CDB2OSG/src/CDB/Resource/ResourceLocators/: FileNameSolver.h  FolderNameSolver.h  TiledResourceLocator.cpp  TiledResourceLocator.h
CDB2OSG/src/CDB/Resource/ResourceLocators/PathSolvers/: LatitudePathSolver.cpp  LatitudePathSolver.h  LayerComponentPathSolver.cpp  LayerComponentPathSolver.h  LayerPathSolver.cpp  LayerPathSolver.h  LodPathSolver.cpp  LodPathSolver.h  LongitudePathSolver.cpp  LongitudePathSolver.h  PathSolverUtils.h  RRefPathSolver.cpp  RRefPathSolver.h  URefPathSolver.cpp  URefPathSolver.h
CDB2OSG/src/CDB/ResourceAccesors/: HeightfieldResourceAccesor.cpp  HeightfieldResourceAccesor.h  ImageResourceAccesor.cpp  ImageResourceAccesor.h
CDB2OSG/src/CDB2OSG/: Functions.cpp  Functions.h  TileBuilder.cpp  TileBuilder.h
CDB2OSG/src/CDB2OSG/Linkers/: PrimaryElevationLinker.cpp  PrimaryElevationLinker.h  PrimaryImageryLinker.cpp  PrimaryImageryLinker.h
CDB2OSG/src/CDB2OSG/Subsampling/: ElevationDatasetSubsampler.cpp  ElevationDatasetSubsampler.h  SubsampledLodTileQuery.cpp  SubsampledLodTileQuery.h  SubsampledResource.cpp  SubsampledResource.h
CDB2OSG/src/CDB2OSG/TileBuilders/: BasicTileBuilder.cpp  BasicTileBuilder.h  LODPolicy.h  LODTileBuilder.cpp  LODTileBuilder.h  NextTiles.cpp  NextTiles.h  PagedLODTileBuilder.cpp  PagedLODTileBuilder.h  ProgressiveTileBuilder.cpp  ProgressiveTileBuilder.h
CDB2OSG/src/CDB2OSG/TileBuilders/LODPolicies/: CustomLODPolicy.cpp  CustomLODPolicy.h  LinearLODPolicy.cpp  LinearLODPolicy.h  OnlyLODPolicy.cpp  OnlyLODPolicy.h
CDB2OSG/src/osgOverrides/: GeometryTechnique.cpp  GeometryTechnique.h  PagedLOD.cpp  PagedLOD.h  TerrainTile.h
